# synchron

./: Cargo.toml  LICENSE  README.md  README_zh.md  package.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: init_detect.rs  init_service.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/executor/: Cargo.toml
crates/ffi/: Cargo.toml
crates/ffi/src/: epoll.rs  error.rs  fanotify.rs  lib.rs  raw.rs  types.rs  uid.rs
crates/ffi/src/flags/: epoll.rs  errno.rs  fanotify.rs  fcntl.rs  inotify.rs  mod.rs
crates/manager/: Cargo.toml
crates/manager/src/: main.rs
crates/reconciler/: Cargo.toml
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  uds.rs
crates/watcher/: Cargo.toml
crates/watcher/src/: collector.rs  lib.rs
crates/worker/: Cargo.toml
src/: cli.rs  ignore_config.rs  logger.rs  main.rs  sync.rs  watcher.rs
test/: integration.rs
