[package]
name = "synchron"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
notify = "8.1"
notify-debouncer-mini = "0.6"
ignore = "0.4"
crossbeam-channel = "0.5"
simplelog = "0.12"
log = "0.4"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.20"
assert_cmd = "2.0"
assert_fs = "1.0"
predicates = "3.1"
