[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
authors = ["SOV710 <chris916911179@outlook.com"]
edition = "2021"
rust-version = "1.90.0"
description = "A real-time folder synchronization tool, inspired by Syncthing."
documentation = "https://docs.rs/synchron"
readme = "README.md"
homepage = "https://github.com/SOV710/synchron"
repository = "https://github.com/SOV710/synchron"
license = "MIT"
license-file = "LICENSE"
keywords = ["files", "filesync", "realtime", "sync"]
categories = ["accessibility", "asynchronous", "command-line-utilities"]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
ignore = "0.4"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplelog = "0.12"
thiserror = "2"
time = "0.3"
tokio = { version = "1", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "process",
  "rt",
  "rt-multi-thread",
  "sync",
  "time",
] }

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1

