[package]
name = "synchron-manager"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[[bin]]
name = "synchron-manager"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
synchron-common = { path = "../common/" }
tokio = { workspace = true }

