[package]
name = "synchron-watcher"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
path = "src/lib.rs"

[dependencies]
common = { path = "../common/" }
inotify = "0.11.0"
walkdir = "2.5.0"
thiserror = { workspace = true }

