[package]
name = "synchron-watcher"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
path = "src/lib.rs"

[dependencies]
ignore = "0.4"
synchron-common = { path = "../common/" }
synchron-ffi = { path = "../ffi/" }
thiserror = { workspace = true }
tokio = { workspace = true }

